<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_delivery"
        android:icon="@drawable/ic_directions_bike_24"
        android:title="@string/title_delivery" />

    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/ic_format_align_center_24"
        android:title="@string/title_history" />

    <item
        android:id="@+id/navigation_earning"
        android:icon="@drawable/ic_area_chart_24"
        android:title="@string/title_earning" />

    <item
        android:id="@+id/navigation_leaderboard"
        android:icon="@drawable/ic_leaderboard_24"
        android:title="@string/title_leaderboard" />

    <item
        android:id="@+id/navigation_notification"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notification" />

</menu>