<?xml version="1.0" encoding="utf-8"?>

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".view.ui.PhoneActivity">

        <LinearLayout
            android:id="@+id/top_shape"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/reset_pass_background">

            <ImageView
                android:id="@+id/back"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_marginTop="30dp"
                android:layout_marginStart="20dp"
                android:background="@drawable/back"
                />

            <TextView
                android:id="@+id/explores_wo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginStart="120dp"
                android:textColor="@color/white"
                android:text="Phone Verification"
                android:textAppearance="@style/explores_wo"
                android:gravity="top"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/please_ente"
            android:layout_width="335dp"
            android:layout_height="44dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="27dp"
            android:layout_below="@id/top_shape"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:textSize="16dp"
            android:fontFamily="@font/calibri"
            android:text="@string/please_ente"
            android:textAppearance="@style/please_ente"
            android:lineSpacingExtra="4sp"
            android:translationY="-1.8sp"
            android:gravity="top"
            />

        <TextView
            android:id="@+id/phone_numbe"
            android:layout_width="113dp"
            android:layout_height="21dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="25dp"
            android:layout_below="@id/please_ente"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:textSize="16dp"
            android:fontFamily="@font/calibri"
            android:text="@string/phone_numbe"
            android:textAppearance="@style/phone_numbe"
            android:lineSpacingExtra="0sp"
            android:gravity="top"
            />

        <EditText
            android:id="@+id/phoneEt"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="15sp"
            android:paddingLeft="30dp"
            android:drawableRight="@null"
            android:paddingRight="20dp"
            android:padding="@dimen/_10sdp"
            android:layout_marginStart="45dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_below="@+id/phone_numbe"
            android:textColor="@color/mainText"
            android:drawableStart="@drawable/phone_icon"
            android:background="@drawable/phone_edit_shape"
            android:fontFamily="@font/calibri"
            android:textAppearance="@style/some_id"
            android:hint="@string/some_id"
            android:textAlignment="center"
            android:inputType="number"
            android:maxLines="1" />

        <TextView
            android:id="@+id/we_will_sen"
            android:layout_width="307dp"
            android:layout_height="22dp"
            android:layout_marginTop="20dp"
            android:layout_centerInParent="true"
            android:layout_below="@id/phoneEt"
            android:text="@string/we_will_sen"
            android:textAppearance="@style/we_will_sen"
            android:lineSpacingExtra="4sp"
            android:translationY="-1.8sp"
            android:gravity="top"
            />

        <LinearLayout
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginBottom="30dp"
            android:background="@drawable/forgotpassbuttonshape"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/calibri"
                android:text="Continue"
                android:textColor="@color/white"
                android:textSize="20dp" />


        </LinearLayout>

    </RelativeLayout>

