<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:orientation="vertical"
    tools:context=".view.ui.EarningFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/white"
        app:navigationIcon="@drawable/ic_arrow_left_24"
        app:title="History" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <GridLayout
            android:id="@+id/GridLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp8"
            android:alignmentMode="alignMargins"
            android:columnCount="2"
            android:orientation="horizontal"
            android:rowCount="2">

            <androidx.cardview.widget.CardView
                android:id="@+id/btnHistory"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="@dimen/dp8"
                android:clickable="true"
                app:cardBackgroundColor="@color/teal_50"
                app:cardCornerRadius="@dimen/dp16">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="bottom"
                    android:orientation="vertical"
                    android:padding="@dimen/dp16">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/on_time_delivery"
                        android:textAllCaps="true"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="1130"
                        android:textColor="#4CAF50"
                        android:textSize="32sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="@dimen/dp8"
                app:cardBackgroundColor="@color/light_green_100"
                app:cardCornerRadius="@dimen/dp16">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:gravity="bottom"
                    android:orientation="vertical"
                    android:padding="@dimen/dp16">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/late_delivery"
                        android:textAllCaps="true"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="236"
                        android:textColor="#2196F3"
                        android:textSize="32sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="@dimen/dp8"
                app:cardBackgroundColor="@color/blue_grey_100"
                app:cardCornerRadius="@dimen/dp16">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:gravity="bottom"
                    android:orientation="vertical"
                    android:padding="@dimen/dp16">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/withdraw_cancel"
                        android:textAllCaps="true"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="13"
                        android:textSize="32sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="@dimen/dp8"
                app:cardBackgroundColor="@color/blue_50"
                app:cardCornerRadius="@dimen/dp16">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:gravity="bottom"
                    android:orientation="vertical"
                    android:padding="@dimen/dp16">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/expired_cancel"
                        android:textAllCaps="true"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="15"
                        android:textColor="@color/red_500"
                        android:textSize="32sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="@dimen/dp8"
                app:cardBackgroundColor="@color/amber_50"
                app:cardCornerRadius="@dimen/dp16">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="bottom"
                    android:orientation="vertical"
                    android:padding="@dimen/dp16">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/customer_cancel"
                        android:textAllCaps="true"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="15"
                        android:textColor="@color/red_500"
                        android:textSize="32sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </GridLayout>

    </androidx.core.widget.NestedScrollView>


</LinearLayout>